[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Source/UI/Menu.gd" type="Script" id=2]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )
main_menu_scene_path = "res://Source/Scenes/GameLevelSelector.tscn"

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PauseMenu" type="ColorRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.223529, 0.223529, 0.223529, 0.223529 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="Control/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PauseMenu/CenterContainer"]
margin_left = 451.0
margin_top = 160.0
margin_right = 572.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="ContinueButton" type="Button" parent="Control/PauseMenu/CenterContainer/VBoxContainer"]
margin_right = 104.0
margin_bottom = 40.0
rect_min_size = Vector2( 104, 40 )
text = "Continue"

[node name="RestartButton" type="Button" parent="Control/PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 104.0
margin_bottom = 120.0
rect_min_size = Vector2( 104, 40 )
text = "Restart"

[node name="LevelSelectorButton" type="Button" parent="Control/PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 104.0
margin_bottom = 200.0
rect_min_size = Vector2( 104, 40 )
text = "LevelSelector"

[node name="ExitButton" type="Button" parent="Control/PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 104.0
margin_bottom = 280.0
rect_min_size = Vector2( 104, 40 )
text = "Exit"

[connection signal="pressed" from="Control/PauseMenu/CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Control/PauseMenu/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Control/PauseMenu/CenterContainer/VBoxContainer/LevelSelectorButton" to="." method="_on_LevelSelectorButton_pressed"]
[connection signal="pressed" from="Control/PauseMenu/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
